--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         </nav>
         <main>
             <section>
-                <h1>Hello, I'm Tim! I'm a Full-Stack-Engineer based in Bremen, Germany</h1>
+                <h1>Hello, I'm Tim!</h1>
+                <p>I'm a Full-Stack-Engineer based in Germay.</p>
             </section>
         </main>
     </body>
